--- a/logback.mongodb/pom.xml
+++ b/logback.mongodb/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>logback.mongodb</groupId>
-	<artifactId>logback.mongodb</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
+	<groupId>io.northernlights</groupId>
+	<artifactId>logback-mongodb</artifactId>
+	<version>2.0.0-SNAPSHOT</version>
 	<name>Logback appender for mongoDB</name>
 
 	<developers>
@@ -27,29 +27,38 @@
             </roles>
             <organizationUrl>http://www.chariotsolutions.com</organizationUrl>
         </developer>
+        <developer>
+            <name>Alessandro Garzaro</name>
+            <email>garzaro.alessandro@gmail.com</email>
+            <organization>Northernlights.io</organization>
+            <roles>
+                <role>developer</role>
+            </roles>
+            <organizationUrl>http://www.northernlights.io</organizationUrl>
+        </developer>
 	</developers>
 
 	<properties>
-		<java.version>1.6</java.version>
-		<logback.version>1.0.0</logback.version>
-		<mongodb.version>2.7.3</mongodb.version>
-		<slf4j.version>1.6.4</slf4j.version>
+		<java.version>1.8</java.version>
+		<logback.version>1.2.3</logback.version>
+		<mongodb.version>3.6.2</mongodb.version>
+		<slf4j.version>1.7.25</slf4j.version>
 
-		<maven.assembly.plugin>2.3</maven.assembly.plugin>
-		<maven.clean.plugin>2.4.1</maven.clean.plugin>
-		<maven.compiler.plugin>2.3.2</maven.compiler.plugin>
-		<maven.dependency.plugin>2.4</maven.dependency.plugin>
-		<maven.deploy.plugin>2.7</maven.deploy.plugin>
-		<maven.enforcer.plugin>1.0.1</maven.enforcer.plugin>
-		<maven.help.plugin>2.1.1</maven.help.plugin>
-		<maven.install.plugin>2.3.1</maven.install.plugin>
-		<maven.jar.plugin>2.4</maven.jar.plugin>
-		<maven.release.plugin>2.2.2</maven.release.plugin>
-		<maven.resources.plugin>2.5</maven.resources.plugin>
-		<maven.source.plugin>2.1.2</maven.source.plugin>
-		<maven.surefire.plugin>2.12</maven.surefire.plugin>
-		<maven.version.range>[2.2.1,3.1.0)</maven.version.range>
-		<maven.versions.plugin>1.2</maven.versions.plugin>
+		<maven.assembly.plugin>3.1.0</maven.assembly.plugin>
+		<maven.clean.plugin>3.0.0</maven.clean.plugin>
+		<maven.compiler.plugin>3.7.0</maven.compiler.plugin>
+		<maven.dependency.plugin>3.0.2</maven.dependency.plugin>
+		<maven.deploy.plugin>2.8.2</maven.deploy.plugin>
+		<maven.enforcer.plugin>3.0.0-M1</maven.enforcer.plugin>
+		<maven.help.plugin>2.2</maven.help.plugin>
+		<maven.install.plugin>2.5.2</maven.install.plugin>
+		<maven.jar.plugin>3.0.2</maven.jar.plugin>
+		<maven.release.plugin>2.5.3</maven.release.plugin>
+		<maven.resources.plugin>3.0.2</maven.resources.plugin>
+		<maven.source.plugin>3.0.1</maven.source.plugin>
+		<maven.surefire.plugin>2.20.1</maven.surefire.plugin>
+		<maven.version>3.5.2</maven.version>
+		<maven.versions.plugin>2.5</maven.versions.plugin>
 	</properties>
 
 	<dependencies>
@@ -181,7 +190,7 @@
 										</excludes>
 									</bannedDependencies>
 									<requireMavenVersion>
-										<version>${maven.version.range}</version>
+										<version>${maven.version}</version>
 									</requireMavenVersion>
 									<requireJavaVersion>
 										<version>${java.version}</version>
