--- a/logback.mongodb/pom.xml
+++ b/logback.mongodb/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.northernlights</groupId>
 	<artifactId>logback-mongodb</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>2.0.0</version>
 	<name>Logback appender for mongoDB</name>
 
 	<developers>
@@ -215,9 +215,8 @@
 		</pluginManagement>
 	</build>
 
-
-	<scm>
-		<url>https://github.com/smilebase/logback-mongodb</url>
+    <scm>
+		<url>https://github.com/coderoffortune/logback-mongodb</url>
 	</scm>
 
 </project>
